--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -368,6 +368,7 @@ $darkgrey: rgb(61, 66, 74);
 
             p {
               a {
+                cursor: pointer;
                 margin-right: 1rem;
                 text-decoration: none;
                 color: $darkgrey;
