--- a/Revamedia/src/app/Components/profile/profile.component.html
+++ b/Revamedia/src/app/Components/profile/profile.component.html
@@ -20,14 +20,13 @@
       </div>
 
       <div class="right-card">
-        <!-- *ngIf="user?.username != currentUser?.username" -->
         <div class="right-card-container" *ngIf="user?.username != currentUser?.username">
-          <form #followForm="ngForm" (ngSubmit)="followUser(followForm)">
+          <form #followForm="ngForm" (ngSubmit)="followUser(followForm)" *ngIf="follow == false">
             <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followerId">
             <input type="hidden" ngModel="{{ user?.userId }}" name="followedId">
             <button>Follow</button>
           </form>
-          <form #unfollowForm="ngForm" (ngSubmit)="unfollowUser(unfollowForm)">
+          <form #unfollowForm="ngForm" (ngSubmit)="unfollowUser(unfollowForm)" *ngIf="follow == true">
             <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followerId">
             <input type="hidden" ngModel="{{ user?.userId }}" name="followedId">
             <button id="unFollow">Unfollow</button>
@@ -47,7 +46,6 @@
     </div>
 
     <div class="shared-youtube-links-container">
-      <h5 *ngIf="posts.length != 0">Shared Youtube Links</h5>
       <div class="youtube-post-wrapper" *ngFor="let post of posts">
         <div class="youtube-post" *ngIf="post?.image === null" id="post-body">
           <div class="youtube-link">
@@ -72,7 +70,7 @@
 </div>
 
 <!-- BLACKOUTSCREEN START-->
-<div class="screen" id="screen"></div>
+<div class="screen" id="screen" (click)="closeAnyModal()"></div>
 <!-- BLACKOUTSCREEN END-->
 
 <!-- FOLLOWERS MODALS START-->
