--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -372,7 +372,7 @@ $darkgrey: rgb(61, 66, 74);
                 margin-right: 1rem;
                 text-decoration: none;
                 color: $darkgrey;
-                font-weight: 500;
+                font-weight: 600;
                 font-size: 1rem;
 
                 &:hover {
@@ -498,6 +498,12 @@ $darkgrey: rgb(61, 66, 74);
             font-size: 1rem;
             color: $darkgrey;
             padding: .4rem;
+            outline: none;
+            border-radius: 4px;
+            border: 1.5px solid $grey;
+            &:focus{
+              border: 1.5px solid $blue;
+            }
           }
 
           .reactions {
@@ -674,19 +680,18 @@ $darkgrey: rgb(61, 66, 74);
                 height: 1.5rem;
                 border: 1.5px solid $blue;
                 cursor: pointer;
-
+                margin-right: .5rem;
                 &:hover {
                   border: 1.5px solid $orange;
                 }
               }
 
-              a {
+              p {
+                cursor: pointer;
                 text-decoration: none;
                 color: $darkgrey;
-                margin-left: .5rem;
                 font-size: 1rem;
-                font-weight: 500;
-
+                font-weight: 600;
                 &:hover {
                   text-decoration: underline;
                 }
@@ -790,6 +795,12 @@ $darkgrey: rgb(61, 66, 74);
                 font-size: 1rem;
                 color: $darkgrey;
                 padding: .4rem;
+                border: 1.5px solid $grey;
+                outline: none;
+                border-radius:5px;
+                &:focus{
+                  border: 1.5 solid $blue;
+                }
               }
 
               .reactions {
@@ -940,19 +951,18 @@ $darkgrey: rgb(61, 66, 74);
                 height: 1.5rem;
                 border: 1.5px solid $blue;
                 cursor: pointer;
-
+                margin-right: .5rem;
                 &:hover {
                   border: 1.5px solid $orange;
                 }
               }
 
-              a {
+              p {
+                cursor: pointer;
                 text-decoration: none;
                 color: $darkgrey;
-                margin-left: .5rem;
                 font-size: 1rem;
-                font-weight: 500;
-
+                font-weight: 600;
                 &:hover {
                   text-decoration: underline;
                 }
