--- a/Revamedia/src/styles.scss
+++ b/Revamedia/src/styles.scss
@@ -110,6 +110,9 @@ $darkgrey: rgb(61,66,74);
       }
     }
   }
+  #profile-post-message{
+    color: white;
+  }
   #commentSection{
     transition: all 0.4s ease-in-out;
     background-color: rgb(31, 31, 31);
@@ -118,7 +121,7 @@ $darkgrey: rgb(61,66,74);
     h5{
       color: white;
     }
-    a{
+    p,a{
       color: white;
       &:hover{
         color: $blue;
