style design for 2fa

--- a/Revamedia/src/app/Components/qrcode/qrcode.component.html
+++ b/Revamedia/src/app/Components/qrcode/qrcode.component.html
@@ -1,1 +1,9 @@
-<img src="data:image/png;base64,{{image.data}}" />
+<div class="qrcode-page" id="qrcode-page">
+  <div class="qrcode-nav">
+    <h1>Revamedia</h1>
+  </div>
+  <div class="qrcode">
+    <img src="https://www.qrcode-monkey.com/img/default-preview-qr.svg" />
+    <!-- <img src="data:image/png;base64,{{image.data}}" /> -->
+  </div>
+</div>
