--- a/Revamedia/src/styles.scss
+++ b/Revamedia/src/styles.scss
@@ -125,6 +125,11 @@ $darkgrey: rgb(61,66,74);
       }
     }
   }
+  #settingsContainer{
+    h3{
+      color: white;
+    }
+  }
   #post-body{
     background-color: rgb(31, 31, 31);
     a, p, span{
