--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -16,15 +16,12 @@
         <div class="users-list" *ngIf="allUsers.length != 0">
           <div *ngFor="let u of allUsers" class="userFound">
             <div class="user" (click)="goToProfile(u?.userId)" title="View {{u?.username}}'s Profile">
-              <p>{{u?.firstName +" "+ u?.lastName}}</p>
+              <p>{{u?.username}}</p>
             </div>
           </div>
         </div>
       </form>
-      <div class="buttons">
-        <button (click)="openModal('add','post-modal', user)">Add Post</button>
-        <button (click)="openModal('add','youtube-modal', user)" id="share-youtube">Share Video</button>
-      </div>
+      <button (click)="openModal('add','post-modal', user)">Add Post</button>
     </div>
   </div>
   <!-- Page title End -->
@@ -39,20 +36,15 @@
               <a (click)="goToProfile(post?.ownerId.userId)">{{ post?.ownerId.username }}</a>
             </div>
             <div class="post-options">
-              <fa-icon (click)="openModal('edit','post-modal', p)" *ngIf="p?.image !== null"  id="editIcon" [icon]="faPenToSquare"></fa-icon>
-              <fa-icon (click)="openModal('delete', 'post-modal', p)" *ngIf="p?.image !== null"   id="trashIcon" [icon]="faTrashCan"></fa-icon>
-              <fa-icon (click)="openModal('edit', 'youtube-modal', p)" *ngIf="p?.image === null" id="editIcon" [icon]="faPenToSquare"></fa-icon>
-              <fa-icon (click)="openModal('delete', 'youtube-modal', p)" *ngIf="p?.image === null" id="trashIcon" [icon]="faTrashCan"></fa-icon>
+              <fa-icon (click)="togglePostsOptions()" id="icon" [icon]="faEllipsis"></fa-icon>
+              <ul *ngIf="postsOptionsClicked" id="postOptionMenu">
+                <li (click)="openModal('edit','post-modal', post)">Edit Post</li>
+                <li  (click)="openModal('delete', 'post-modal', post)">Delete Post</li>
+              </ul>
             </div>
           </div>
-          <div class="post-body" id="post-body">
-            <img src="{{ p?.image }}" alt="{{p?.image}}" *ngIf="p?.image !== null">
-            <div class="youtube-link">
-              <div class="youtube-logo">
-                <img src="../../../assets/youtube-svgrepo-com.svg" alt="Youtube">
-              </div>
-                <a *ngIf="p?.image === null" href="{{p?.youtubeLink}}" title="{{p?.youtubeLink}}" target="_blank">{{ p?.youtubeLink }}</a>
-            </div>
+          <div class="post-body">
+            <img src="{{ post?.image }}" alt="{{post?.image}}">
             <div class="post-description" id="setBackgroundColor">
               <p><a routerLink="/profile" routerLinkActive="active">{{ user?.username }}</a>{{post?.message}}</p>
             </div>
@@ -130,7 +122,7 @@
             </div>
             <div class="comment-content">
               <p>{{ comment?.message }}</p>
-              <img *ngIf="comment?.giphyUrl !== ''" src="{{ comment?.giphyUrl }}" alt="Attached Image">
+              <img *ngIf="comment?.giphyUrl != null" src="{{ comment?.giphyUrl }}" alt="Attached Image">
             </div>
 
             <div class="reply-card">
@@ -187,7 +179,7 @@
               </div>
               <div class="reply-content">
                 <p>{{ reply?.message }}</p>
-                <img src="{{ reply?.giphyUrl }}" *ngIf="reply?.giphyUrl !== ''" alt="Attached Image">
+                <img src="{{ reply?.giphyUrl }}" *ngIf="reply?.giphyUrl != null" alt="Attached Image">
               </div>
             </div>
             <!-- Replies End -->
@@ -198,15 +190,15 @@
       </div>
     <!-- post end -->
 
-    <!-- NO POST AVAILABLE START-->
-    <div class="noPost" *ngIf="posts.length == 0">
+      <!-- NO POST AVAILABLE START-->
+      <div class="noPost" *ngIf="posts.length == 0">
 
-      <h1>No Post</h1>
-      <p>Seems like there are no posts available to show</p>
-      <p>Sorry for the inconvience.</p>
-      <span>Be the first to make a post.</span>
-    </div>
-    <!-- NO POST AVAILABLE END-->
+        <h1>No Post</h1>
+        <p>Seems like there are no posts available to show</p>
+        <p>Sorry for the inconvience.</p>
+        <span>Be the first to make a post.</span>
+      </div>
+      <!-- NO POST AVAILABLE END-->
   </div>
   <!-- main feed end -->
 </div>
@@ -221,15 +213,15 @@
     <h3>Create new post</h3>
     <span (click)="closeModal('add', 'post-modal')">x</span>
   </div>
-  <form #addPostForm="ngForm" (ngSubmit)="onAddPost(addPostForm)">
+  <form  #addPostForm="ngForm">
     <div class="form-data">
-      <h4>Add Image Link</h4>
-      <input type="text" name="image" id="image" placeholder="Image url...">
+      <h4>Add Image or Youtube Link</h4>
+      <input type="text" name="image" id="image" placeholder="ImageUrl or Youtube Link">
     </div>
     <div class="form-data">
       <input type="hidden" name="userId" ngModel="{{ post?.userId }}">
       <h4>Write a caption</h4>
-      <textarea name="message" ngModel placeholder="Write a caption..." rows="8"></textarea>
+      <textarea name="message" placeholder="Write a caption..." rows="8"></textarea>
     </div>
     <div class="post-submit">
       <button (click)="onAddPost">Create Post</button>
@@ -244,10 +236,9 @@
     <h3>Edit post</h3>
     <span (click)="closeModal('edit', 'post-modal')">x</span>
   </div>
-  <form #editPostForm="ngForm" (ngSubmit)="onUpdatePost(editPostForm)">
+  <form>
     <div class="form-data">
       <h4>Edit Image or Video</h4>
-      <input type="hidden" name="postId" ngModel="{{ editPost?.postId }}">
       <input type="text" ngModel="{{ editPost?.image }}" name="image" id="image" placeholder="ImageUrl or Youtube Link">
     </div>
     <div class="form-data">
@@ -267,7 +258,7 @@
     <h3>Delete post</h3>
     <span (click)="closeModal('delete', 'post-modal')">x</span>
   </div>
-  <form (ngSubmit)="onDeletePost(deletePost?.postId)">
+  <form>
     <h2>Are you sure you want to delete this post?</h2>
     <span style="font-size: .8rem;">{{ deletePost?.message }}</span>
     <img style="width:8rem;height: 8rem; object-fit:cover;" src="{{ deletePost?.image }}" alt="Image">
@@ -284,10 +275,10 @@
     <h3>Edit comment</h3>
     <span (click)="closeModal('edit', 'comment-modal')">x</span>
   </div>
-  <form #editCommentForm="ngForm" (ngSubmit)="onEditComment(editCommentForm)" ngNativeValidate>
+  <form #editCommentForm="ngForm" (ngSubmit)="onEditComment(editCommentForm)">
     <input type="hidden" name="comment_id" ngModel="{{ editComment?.commentId }}">
     <div class="form-data">
-      <textarea ngModel="{{ editComment?.message }}" name="message" required rows="4"></textarea>
+      <textarea ngModel="{{ editComment?.message }}" name="message" rows="4"></textarea>
     </div>
     <div class="post-submit">
       <button>Update comment</button>
@@ -319,10 +310,10 @@
     <h3>Edit Reply</h3>
     <span (click)="closeModal('edit', 'reply-modal')">x</span>
   </div>
-  <form #editReplyForm="ngForm" (ngSubmit)="onEditReply(editReplyForm)" ngNativeValidate>
+  <form #editReplyForm="ngForm" (ngSubmit)="onEditReply(editReplyForm)">
     <input type="hidden" name="reply_id" ngModel="{{ editReply?.replyId }}">
     <div class="form-data">
-      <textarea ngModel="{{ editReply?.message }}" required name="message" rows="4"></textarea>
+      <textarea ngModel="{{ editReply?.message }}" name="message" rows="4"></textarea>
     </div>
     <div class="post-submit">
       <button>Update Reply</button>
@@ -335,7 +326,7 @@
 <div class="modal" id="delete-reply-modal">
   <div class="form-header">
     <h3>Delete reply</h3>
-    <span (click)="closeModal('delete', 'reply-modal')">x</span>
+    <span (click)="closeModal('delete',  'reply-modal')">x</span>
   </div>
   <form (ngSubmit)="onDeleteReply(deleteReply?.replyId)">
     <h2>Are you sure you want to delete this reply?</h2>
@@ -346,6 +337,15 @@
   </form>
 </div>
 <!-- delete COMMENT FORM END -->
+
+<!-- <div class="file-input">
+  <input type="file" id="file" class="file" (change)="fileName($event, 'edit-post')">
+  <label for="file">
+    Select File
+  </label>
+  <p class="file-name" id="edit-post-fileName"></p>
+</div> -->
+
 
 <!-- ADD Youtube FORM START -->
 <div class="modal" id="add-youtube-modal">
@@ -377,7 +377,7 @@
 <!-- ADD YOUTUBE FORM END -->
 
 <!-- EDIT Youtube FORM START -->
-<div class="modal" id="edit-youtube-modal">
+<!-- <div class="modal" id="edit-youtube-modal">
   <div class="form-header">
     <h3><img src="../../../assets/youtube-svgrepo-com.svg" alt="Youtube">Edit Youtube Post</h3>
     <span (click)="closeModal('edit', 'youtube-modal')">x</span>
@@ -401,11 +401,11 @@
       <button>Update</button>
     </div>
   </form>
-</div>
+</div> -->
 <!-- EDIT YOUTUBE FORM END -->
 
 <!-- DELETE YOUTUBE FORM START -->
-<div class="modal" id="delete-youtube-modal">
+<!-- <div class="modal" id="delete-youtube-modal">
   <div class="form-header">
     <h3><img src="../../../assets/youtube-svgrepo-com.svg" alt="Youtube">Delete Youtube Post</h3>
     <span (click)="closeModal('delete','youtube-modal')">x</span>
@@ -418,5 +418,5 @@
       <button id="deleteBtn">Delete</button>
     </div>
   </form>
-</div>
+</div> -->
 <!-- DELETE YOUTUBE FORM END -->
