--- a/Revamedia/src/app/Components/groups/groups.component.html
+++ b/Revamedia/src/app/Components/groups/groups.component.html
@@ -9,13 +9,13 @@
   </div><!-- CLOSES PAGE TITLE-->
 
   <!-- PAGE CONTENT-->
-  <div class="groups-content">
+  <div class="groups-content" id="main">
 
     <div class="group-subtitle">
       <button (click)="openModal('new-group', '')">Create Group</button>
     </div><!-- CLOSES GROUP SUBTITLE-->
 
-    <h2 class="groupTitle" id="groupsTitle">My Groups</h2>
+    <h2 *ngIf="groups.length != 0" class="groupTitle" id="groupsTitle">My Groups</h2>
     <div class="mygroups-container">
       <div class="group" *ngFor="let group of groups" (click)="goToGroup(group?.groupId)" id="group">
         <img src="{{group?.imageUrl}}" alt="{{group.title}}">
@@ -26,9 +26,9 @@
 
     <h2 class="groupTitle" id="groupsTitle">All Groups</h2>
     <div class="allGroups-container">
-      <div class="group" *ngFor="let group of allGroups" id="group">
+      <div class="group" *ngFor="let group of allGroups" id="group" (click)="goToGroup(group?.groupId)">
         <img *ngIf="group.imageUrl != null" src="{{group?.imageUrl }}" alt="{{group.title}}">
-        <h2 (click)="goToGroup(group?.groupId)">{{ group?.title}}</h2>
+        <h2>{{ group?.title}}</h2>
         <span>{{ group?.description }}</span>
       </div>
     </div>
