--- a/Revamedia/src/app/Components/group/group.component.html
+++ b/Revamedia/src/app/Components/group/group.component.html
@@ -9,7 +9,7 @@
   </div><!-- CLOSES PAGE TITLE-->
 
   <!-- PAGE CONTENT-->
-  <div class="group-content">
+  <div class="group-content" id="main">
 
     <div class="group-description">
       <div class="image">
@@ -18,9 +18,13 @@
       <div class="text">
         <h2>{{group?.title}}</h2>
         <span>{{ group?.description }}</span>
-        <div class="option">
+        <!-- <div class="option">
           <button>Join</button>
           <button>Leave</button>
+        </div> -->
+        <div class="admin">
+          <fa-icon (click)="openModal('edit-group', group)" id="editIcon" [icon]="faPenToSquare"></fa-icon>
+          <fa-icon (click)="openModal('delete-group', group)" id="trashIcon" [icon]="faTrashCan"></fa-icon>
         </div>
       </div>
     </div><!-- CLOSES GROUP DESCRIPTION-->
@@ -35,3 +39,49 @@
   </div><!-- CLOSES PAGE CONTENT-->
 
 </div><!-- CLOSES GROUPS-PAGE-->
+
+
+<!-- BLACKOUTSCREEN -->
+<div class="screen" id="screen"></div>
+<!-- EDIT GROUP FORM START -->
+<div class="modal" id="edit-group-modal">
+  <div class="form-header">
+    <h3>Edit Group</h3>
+    <span (click)="closeModal('edit-group')">x</span>
+  </div>
+  <form #form="ngForm" ngNativeValidate>
+    <div class="form-data">
+      <h4>Edit Group Name</h4>
+      <input type="text" name="title" id="title" ngModel="{{ editGroup?.title }}" placeholder="Enter group name..." required>
+    </div>
+    <div class="form-data">
+      <input type="hidden" name="ownerId" ngModel="{{ currentUser?.userId }}">
+      <h4>Edit Group description</h4>
+      <textarea name="description" ngModel="{{ editGroup?.description }}" placeholder="Write a breif group description..." rows="4"></textarea>
+    </div>
+    <div class="form-data">
+      <h4>Edit Group Image</h4>
+      <input type="url" name="imageUrl" id="imageUrl" ngModel="{{ editGroup?.imageUrl }}" placeholder="Group Image Url Link..." required>
+    </div>
+    <div class="post-submit">
+      <button>Update Group</button>
+    </div>
+  </form>
+</div><!-- EDIT GROUP FORM END -->
+
+<!-- DELETE GROUP FORM START -->
+<div class="modal" id="delete-group-modal">
+  <div class="form-header">
+    <h3>Delete Group</h3>
+    <span (click)="closeModal('delete-group')">x</span>
+  </div>
+  <form (ngSubmit)="onDeleteGroup( deleteGroup?.groupId )">
+    <div class="form-data">
+      <p>Are you sure you want to delete this group?</p>
+      <span style="font-size: .9rem;">{{ deleteGroup?.title }}</span>
+    </div>
+    <div class="post-submit">
+      <button>Delete Group</button>
+    </div>
+  </form>
+</div><!-- DELETE GROUP FORM END -->
