--- a/Revamedia/src/app/Components/group/group.component.scss
+++ b/Revamedia/src/app/Components/group/group.component.scss
@@ -55,10 +55,61 @@ $darkgrey: rgb(61, 66, 74);
           color: $darkgrey;
           font-size: 1.1rem;
         }
+        .admin{
+          #editIcon{
+            color: $blue;
+            font-size: 1.2rem;
+            cursor: pointer;
+            &:hover{
+              color: #408eae;
+            }
+          }
+          #trashIcon{
+            cursor: pointer;
+            margin-left: 1rem;
+            color: $orange;
+            font-size: 1.2rem;
+            &:hover{
+              color: #cb8836;
+            }
+          }
+        }
+      }
+    }
+
+    .group-wall{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .noPost {
+        width: 60%;
+        padding: 2rem;
+        margin: 5rem 0;
+        border-radius: 8px;
+        background-color: #FBAB7E;
+        background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+        box-shadow: rgba(0, 0, 0, 0.075) 0px 3px 8px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        h4 {
+          font-size: 3rem;
+          color: white;
+        }
+        span{
+          margin-top: 1rem;
+          font-size: 1.3rem;
+          color: $darkgrey;
+        }
       }
     }
   }
 }
+
 
 // Media Queries
 @media screen and (max-width: 800px) {
