--- a/Revamedia/src/styles.scss
+++ b/Revamedia/src/styles.scss
@@ -17,7 +17,7 @@ $darkgrey: rgb(61,66,74);
 .darkMode{
   transition: all 0.4s ease-in-out;
   color: white;
-  #home-page,#events-page,#groups-page,#messages-page,#profile-page,#settings-page, #post-page{
+  #home-page,#events-page,#groups-page,#group-page,#messages-page,#profile-page,#settings-page, #post-page{
     background-color: rgb(31, 31, 31);
     transition: all 0.4s ease-in-out;
   }
@@ -165,5 +165,11 @@ $darkgrey: rgb(61,66,74);
     background-color: rgb(15, 15, 15);
     color: white;
     border-right: .5px solid $orange;
+  }
+  #group-description{
+    background-color: rgb(31, 31, 31);
+    h2,span{
+      color: white;
+    }
   }
 }
