--- a/Revamedia/src/app/Components/groups/groups.component.html
+++ b/Revamedia/src/app/Components/groups/groups.component.html
@@ -17,7 +17,7 @@
 
     <h2 *ngIf="groups.length != 0" class="groupTitle" id="groupsTitle">My Groups</h2>
     <div class="mygroups-container">
-      <div class="group" *ngFor="let group of groups" (click)="goToGroup(group?.groupId)" id="group">
+      <div class="group" *ngFor="let group of groups" (click)="goToGroup(group?.groupId)" id="group" title="View {{group?.title}}">
         <img src="{{group?.imageUrl}}" alt="{{group.title}}">
         <h2>{{group?.title}}</h2>
         <!-- <span>{{ group?.description }}</span> -->
@@ -26,7 +26,7 @@
 
     <h2 class="groupTitle" id="groupsTitle">All Groups</h2>
     <div class="allGroups-container">
-      <div class="group" *ngFor="let group of allGroups" id="group" (click)="goToGroup(group?.groupId)">
+      <div class="group" *ngFor="let group of allGroups" id="group" (click)="goToGroup(group?.groupId)"  title="View {{group?.title}}">
         <img *ngIf="group.imageUrl != null" src="{{group?.imageUrl }}" alt="{{group.title}}">
         <h2>{{ group?.title}}</h2>
         <!-- <span>{{ group?.description }}</span> -->
