--- a/Revamedia/src/app/Components/groups/groups.component.scss
+++ b/Revamedia/src/app/Components/groups/groups.component.scss
@@ -81,9 +81,9 @@ $darkgrey: rgb(61, 66, 74);
       cursor: pointer;
       img{
         border-radius: 6px;
-        width: 100%;
+        width: 15rem;
         height: 15rem;
-        object-fit:fill;
+        object-fit: cover;
         border: 2px solid $orange;
         transition: all 0.3s ease-in-out;
         cursor: pointer;
@@ -128,34 +128,6 @@ $darkgrey: rgb(61, 66, 74);
         grid-template-columns: repeat(1,1fr);
         grid-column-gap: 2rem;
         grid-row-gap: 3rem;
-      }
-    }
-  }
-
-  // MODALS
-  .modal{
-    .modal-body{
-      .follower,.following{
-        .follower-data,.following-data{
-          img{
-            width: 2rem;
-            height: 2rem;
-            border-radius: 50%;
-          }
-          h5{
-            margin-left: .5rem;
-            color: $darkgrey;
-          }
-        }
-        .follow-option{
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content:  center;
-          button{
-            margin-bottom: .3rem;
-          }
-        }
       }
     }
   }
