adding missing functions

--- a/Revamedia/src/app/Components/group/group.component.html
+++ b/Revamedia/src/app/Components/group/group.component.html
@@ -42,7 +42,7 @@
 
 
 <!-- BLACKOUTSCREEN -->
-<div class="screen" id="screen"></div>
+<div class="screen" id="screen" (click)="closeAnyModal()"></div>
 <!-- EDIT GROUP FORM START -->
 <div class="modal" id="edit-group-modal">
   <div class="form-header">
