--- a/Revamedia/src/app/Components/groups/groups.component.html
+++ b/Revamedia/src/app/Components/groups/groups.component.html
@@ -37,7 +37,7 @@
 </div><!-- CLOSES GROUPS-PAGE-->
 
 <!-- BLACKOUTSCREEN -->
-<div class="screen" id="screen"></div>
+<div class="screen" id="screen" (click)="closeAnyModal()"></div>
 <!-- ADD POST FORM START -->
 <div class="modal" id="new-group-modal">
   <div class="form-header">
